--- a/index.html
+++ b/index.html
@@ -2,19 +2,17 @@
 <html lang="it">
 <head>
 <meta charset="UTF-8" />
-<title>Finanze personali — Import XLSX</title>
+<title>Finanze personali — Dashboard & Import XLSX</title>
 
-<!-- SheetJS per leggere file Excel nel browser -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.19.3/xlsx.full.min.js"
-        integrity="sha512-kTtm84M6bBtDjvR/ko6/nYw+f37X1LpNJBDesJQ2+8t+J3E1Z+0LxKi4h4QDS4VvyOeLoDnSxJ0ONw7X3bHsfQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<!-- SheetJS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.19.3/xlsx.full.min.js"></script>
 
 <style>
-:root{--line:28px;--line-cl:#cdd7ee;--paper:#fbfcff;--ink:#1e293b;
+:root{--line:28px;--lcol:#cdd7ee;--paper:#fbfcff;--ink:#1e293b;
       --green:#15803d;--red:#b91c1c;--lav:#d0d7e6;}
 *{box-sizing:border-box;margin:0;padding:0;font-family:"Courier New",monospace}
 body{padding:2rem 1rem;background:repeating-linear-gradient(var(--paper)0 var(--line),
-     var(--line-cl)var(--line)calc(var(--line)+1px));color:var(--ink)}
+     var(--lcol)var(--line)calc(var(--line)+1px));color:var(--ink)}
 h1{text-align:center;margin-bottom:2rem;font-size:2.2rem;text-transform:uppercase;letter-spacing:1px}
 h2{margin:1.3rem 0 0.5rem;font-size:1.25rem;text-decoration:underline double}
 .container{max-width:1200px;margin:0 auto}
@@ -22,7 +20,8 @@ h2{margin:1.3rem 0 0.5rem;font-size:1.25rem;text-decoration:underline double}
 .card{background:#ffffffe0;border:1px solid #888;backdrop-filter:blur(2px);
       padding:1rem;border-radius:10px;text-align:center;box-shadow:0 2px 4px rgba(0,0,0,.08)}
 .card h2{font-size:0.9rem;margin-bottom:0.15rem}
-.card p{font-size:1.4rem;font-weight:700}.positive{color:var(--green)}.negative{color:var(--red)}
+.card p{font-size:1.4rem;font-weight:700}
+.positive{color:var(--green)} .negative{color:var(--red)}
 table{width:100%;border-collapse:collapse;margin-bottom:2rem;background:#ffffffd0;border:1px solid #888;backdrop-filter:blur(2px)}
 thead{background:#343434;color:#fff}th,td{padding:0.55rem 0.6rem;text-align:center;font-size:0.9rem}
 tbody tr:nth-child(even){background:#f1f5f9dd}
@@ -54,11 +53,11 @@ button{cursor:pointer;font-weight:700;background:var(--lav)}
   <h2>Riepilogo Mensile</h2>
   <table id="monthly"><thead><tr><th>Mese</th><th>Entrate</th><th>Uscite</th><th>Saldo</th></tr></thead><tbody></tbody></table>
 
-  <!-- Dettaglio base -->
+  <!-- Dettaglio transazioni fisse / manuali -->
   <h2>Transazioni fisse / manuali</h2>
   <table id="detail"><thead><tr><th>Data</th><th>Categoria</th><th>Tipo</th><th>Importo</th><th>Saldo</th></tr></thead><tbody></tbody></table>
 
-  <!-- Aggiunta manuale -->
+  <!-- Form manuale -->
   <h2>Inserisci spesa / entrata</h2>
   <form id="manual">
     <input type="date" id="m-date" required>
@@ -70,141 +69,140 @@ button{cursor:pointer;font-weight:700;background:var(--lav)}
 </div>
 
 <script>
-/* ---------- Config & util ---------- */
-const START_BALANCE = 6100;
+/* ----------- CONFIG ----------- */
+const START_BALANCE = 6100;                        // saldo iniziale 24-06-2025
 const fmt = v => `€ ${Math.round(v).toLocaleString('it-IT')}`;
 const monthKey = d => d.slice(0,7);
+const lastDay=(y,m)=>new Date(y,m+1,0).getDate();
 
-/* ---------- Transazioni fisse di partenza (inserisci qui le tue reali) ---------- */
-const baseTx = [
-  {date:'2025-07-01',category:'Stipendio',type:'Entrata',amount:1650},
-  {date:'2025-07-01',category:'Ticket Edenred',type:'Entrata',amount:160},
-  {date:'2025-07-31',category:'Affitto',type:'Spesa',amount:680},
-  {date:'2025-07-31',category:'ATM',type:'Spesa',amount:39},
+/* ----------- Transazioni fisse da luglio 2025 a dicembre 2026 ----------- */
+const subs = [
+  ['Netflix',19,26,'2025-06'],['Will',7,28,'2025-06'],['ChatGPT',23,22,'2025-06'],
+  ['NowTV',5,19,'2025-07'],['Spotify',15,20,'2025-07'],['Prime Video AD',2,16,'2025-07'],
+  ['Prime',5,16,'2025-07'],['iCloud',10,23,'2025-07'],['YouTube+',9,11,'2025-07']
 ];
+const oneOff = [
+  ['2025-06-27','Aereo Sicilia',53,'Spesa'],['2025-07-12','Beat Canzone',35,'Spesa'],
+  ['2025-07-16','Mix Canzone',27,'Spesa'],  ['2025-07-27','Aereo Sicilia',53,'Spesa'],
+  ['2025-08-10','Rimborso 730',400,'Entrata'],['2025-08-12','Beat Canzone',35,'Spesa'],
+  ['2025-08-16','Mix Canzone',27,'Spesa'], ['2025-07-15','Tredicesima',1300,'Entrata']
+];
+const loan=['2025-07-01','2025-08-01','2025-09-01','2025-10-01']
+            .map(d=>[d,'Finanziamento',39,'Spesa']);
 
-/* ---------- Stato ---------- */
-let tx = [...baseTx];        // transazioni da mostrare in dettaglio
-let extraMonthly = {};       // totali importati via XLSX { mese: {in,out} }
+let tx=[];
+const push=(d,c,t,a)=>tx.push({date:d,category:c,type:t,amount:a});
 
-/* ---------- Calcola & render ---------- */
-function calcRender(){
-  const cards = document.getElementById('cards'),
-        mBody = document.querySelector('#monthly tbody'),
-        dBody = document.querySelector('#detail tbody');
-  cards.innerHTML = ''; mBody.innerHTML = ''; dBody.innerHTML = '';
+/* ----------- Genera tutte le ricorrenze fisse ----------- */
+function generateFixed(){
+  tx=[]; oneOff.forEach(([d,c,a,t])=>push(d,c,t,a)); loan.forEach(([d,c,a,t])=>push(d,c,t,a));
 
-  /* --- Elabora solo le transazioni BASE / manuali --- */
-  const sorted = [...tx].sort((a,b)=> new Date(a.date)-new Date(b.date));
-  let balance = START_BALANCE, monthly = {};
-  sorted.forEach(t=>{
-    balance += t.type==='Entrata'? t.amount : -t.amount;
-    t.balance = balance;
-    const k = monthKey(t.date);
-    if(!monthly[k]) monthly[k] = {in:0,out:0,s:0};
-    t.type==='Entrata'? monthly[k].in += t.amount : monthly[k].out += t.amount;
-    monthly[k].s = balance;
+  let cur=new Date(2025,5,24);                    // giugno 2025
+  const end=new Date(2026,11,31);                 // dic 2026
+  while(cur<=end){
+    const y=cur.getFullYear(), m=cur.getMonth(), iso=`${y}-${String(m+1).padStart(2,'0')}`;
+    if(cur>=new Date('2025-07-01')){
+      push(`${iso}-01`,'Stipendio','Entrata',1650);
+      push(`${iso}-01`,'Ticket Edenred','Entrata',160);
+    }
+    push(`${iso}-${lastDay(y,m)}`,'Affitto','Spesa',680);
+    if(iso!=='2025-08') push(`${iso}-${lastDay(y,m)}`,'ATM','Spesa',39);
+    [5,12,19,26].forEach(d=>d<=lastDay(y,m)&&push(`${iso}-${String(d).padStart(2,'0')}`,'Tabacco','Spesa',20));
+    subs.forEach(([cat,amt,day,from])=>{
+      if(iso>=from){const d=Math.min(day,lastDay(y,m));push(`${iso}-${String(d).padStart(2,'0')}`,cat,'Spesa',amt);}
+    });
+    cur.setMonth(m+1);
+  }
+}
+generateFixed();
+
+/* ----------- Stato import XLSX ----------- */
+let extraMonthly={};   // { '2025-11': {in,out} ... }
+
+/* ----------- Calcola e renderizza ----------- */
+function render(){
+  const C=document.getElementById('cards'),M=document.querySelector('#monthly tbody'),
+        D=document.querySelector('#detail tbody');
+  C.innerHTML=''; M.innerHTML=''; D.innerHTML='';
+
+  const base=[...tx].sort((a,b)=>new Date(a.date)-new Date(b.date));
+  let bal=START_BALANCE, monthly={};
+  base.forEach(t=>{
+    bal+= t.type==='Entrata'? t.amount : -t.amount;
+    t.balance=bal;
+    const k=monthKey(t.date);
+    monthly[k]??={in:0,out:0,s:0};
+    t.type==='Entrata'? monthly[k].in+=t.amount : monthly[k].out+=t.amount;
+    monthly[k].s=bal;
   });
 
-  /* --- Somma i totali importati --- */
   for(const m in extraMonthly){
-    monthly[m] ??= {in:0,out:0,s:0};
+    monthly[m]??={in:0,out:0,s:0};
     monthly[m].in  += extraMonthly[m].in;
     monthly[m].out += extraMonthly[m].out;
   }
 
-  /* --- Ricalcola saldo mese per mese --- */
-  let run = START_BALANCE;
+  let running=START_BALANCE;
   Object.keys(monthly).sort().forEach(m=>{
-    run += (extraMonthly[m]?.in || 0) - (extraMonthly[m]?.out || 0);
-    monthly[m].s = run;
+    running += (extraMonthly[m]?.in||0)-(extraMonthly[m]?.out||0);
+    monthly[m].s=running;
   });
 
-  /* --- Card riepilogo --- */
   const totIn = Object.values(monthly).reduce((s,m)=>s+m.in,0),
         totOut= Object.values(monthly).reduce((s,m)=>s+m.out,0),
         avgOut= Math.round(totOut/Object.keys(monthly).length);
-  [
-    ['Saldo iniziale',START_BALANCE,''],
-    ['Entrate totali',totIn,'positive'],
-    ['Uscite totali', totOut,'negative'],
-    ['Spesa media mese',avgOut,'negative'],
-    ['Saldo attuale',run, run>=0?'positive':'negative']
-  ].forEach(([l,v,cls])=>{
-     const c=document.createElement('div'); c.className='card';
-     c.innerHTML = `<h2>${l}</h2><p class="${cls}">${fmt(v)}</p>`;
-     cards.appendChild(c);
+  [['Saldo iniziale',START_BALANCE],
+   ['Entrate totali',totIn,'positive'],
+   ['Uscite totali',totOut,'negative'],
+   ['Spesa media mese',avgOut,'negative'],
+   ['Saldo attuale',running,running>=0?'positive':'negative']]
+  .forEach(([l,v,cls])=>{
+     const c=document.createElement('div');c.className='card';
+     c.innerHTML=`<h2>${l}</h2><p class="${cls||''}">${fmt(v)}</p>`;C.appendChild(c);
   });
 
-  /* --- Tabella mensile --- */
   Object.keys(monthly).sort().forEach(m=>{
-    const {in:inn,out,s} = monthly[m];
-    mBody.insertAdjacentHTML('beforeend',
+    const {in:inn,out,s}=monthly[m];
+    M.insertAdjacentHTML('beforeend',
       `<tr><td>${m}</td><td class="income">${fmt(inn)}</td><td class="expense">${fmt(out)}</td><td class="balance ${s>=0?'positive':'negative'}">${fmt(s)}</td></tr>`);
   });
 
-  /* --- Dettaglio base / manuali --- */
-  let cur = '';
-  sorted.forEach(t=>{
-    const mk = monthKey(t.date);
-    if(mk !== cur){
-      cur = mk;
-      const label = new Date(`${mk}-01`).toLocaleDateString('it-IT',{month:'long',year:'numeric'});
-      dBody.insertAdjacentHTML('beforeend',
-        `<tr class="month-sep"><td colspan="5">${label.charAt(0).toUpperCase()+label.slice(1)}</td></tr>`);
-    }
-    dBody.insertAdjacentHTML('beforeend',
+  let cur=''; base.forEach(t=>{
+    const k=monthKey(t.date);
+    if(k!==cur){cur=k;const label=new Date(`${k}-01`).toLocaleDateString('it-IT',{month:'long',year:'numeric'});
+      D.insertAdjacentHTML('beforeend',`<tr class="month-sep"><td colspan="5">${label.charAt(0).toUpperCase()+label.slice(1)}</td></tr>`);}
+    D.insertAdjacentHTML('beforeend',
       `<tr><td>${t.date}</td><td>${t.category}</td><td><span class="badge ${t.type==='Entrata'?'income':'expense'}">${t.type}</span></td><td class="${t.type==='Entrata'?'income':'expense'}">${fmt(t.amount)}</td><td class="balance ${t.balance>=0?'positive':'negative'}">${fmt(t.balance)}</td></tr>`);
   });
 }
-calcRender();
+render();
 
-/* ---------- Import XLSX ---------- */
+/* ----------- Import XLSX ----------- */
 document.getElementById('xlsx-form').addEventListener('submit',e=>{
   e.preventDefault();
-  const file = document.getElementById('xlsx-file').files[0];
-  if(!file){alert('Seleziona un file XLSX');return;}
+  const f=document.getElementById('xlsx-file').files[0];
+  if(!f){alert('Scegli il file XLSX');return;}
+  const COL_DATE='Data', COL_AMT='Importo';   // se servono, cambia i nomi colonne
   const reader=new FileReader();
-  reader.onload = evt=>{
-    const wb = XLSX.read(evt.target.result,{type:'binary'});
-    const ws = wb.Sheets[wb.SheetNames[0]];
-    const arr = XLSX.utils.sheet_to_json(ws,{header:1,defval:''});
-
-    /* Trova la riga intestazione con 'Data' e 'Importo' */
-    let idxHeader = arr.findIndex(r => r.includes('Data') && r.includes('Importo'));
-    if(idxHeader===-1){alert('Colonne Data/Importo non trovate');return;}
-    const headers = arr[idxHeader];
-    const colDate = headers.indexOf('Data');
-    const colAmt  = headers.indexOf('Importo');
-
-    /* reset extraMonthly */
-    extraMonthly = {};
-
-    for(let i=idxHeader+1;i<arr.length;i++){
-      const row=arr[i];
-      if(!row[colDate] || !row[colAmt]) continue;
-      /* Gestisci formato Excel date (numerico) o stringa */
-      let iso;
-      if(typeof row[colDate]==='number')
-        iso = XLSX.SSF.format('yyyy-mm-dd', row[colDate]);
-      else
-        iso = new Date(row[colDate]).toISOString().slice(0,10);
-
-      const amount = parseFloat(row[colAmt].toString().replace(',','.'));
-      if(isNaN(amount)) continue;
-      const mKey = monthKey(iso);
-      extraMonthly[mKey] ??= {in:0,out:0};
-      if(amount>=0) extraMonthly[mKey].in  += amount;
-      else          extraMonthly[mKey].out += Math.abs(amount);
-    }
-    calcRender();
-    alert('Import completato! Riepilogo aggiornato.');
+  reader.onload=ev=>{
+    const wb=XLSX.read(ev.target.result,{type:'binary'}), ws=wb.Sheets[wb.SheetNames[0]],
+          rows=XLSX.utils.sheet_to_json(ws,{defval:''});
+    extraMonthly={};
+    rows.forEach(r=>{
+      const rawDate=r[COL_DATE]||r.date; if(!rawDate) return;
+      const iso = typeof rawDate==='number'? XLSX.SSF.format('yyyy-mm-dd',rawDate)
+                                           : new Date(rawDate).toISOString().slice(0,10);
+      const amt=parseFloat((r[COL_AMT]||'').toString().replace(',','.')); if(isNaN(amt)) return;
+      const m=monthKey(iso); extraMonthly[m]??={in:0,out:0};
+      amt>=0? extraMonthly[m].in+=amt : extraMonthly[m].out+=Math.abs(amt);
+    });
+    render(); alert('Import XLSX: totali mensili aggiornati!');
     e.target.reset();
   };
-  reader.readAsBinaryString(file);
+  reader.readAsBinaryString(f);
 });
 
-/* ---------- Form manuale ---------- */
+/* ----------- Form manuale ----------- */
 document.getElementById('manual').addEventListener('submit',e=>{
   e.preventDefault();
   const d=document.getElementById('m-date').value,
@@ -212,9 +210,8 @@ document.getElementById('manual').addEventListener('submit',e=>{
         t=document.getElementById('m-type').value,
         a=parseFloat(document.getElementById('m-amt').value);
   tx.push({date:d,category:c,type:t,amount:a});
-  calcRender(); e.target.reset();
+  render(); e.target.reset();
 });
 </script>
 </body>
 </html>
-
