--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@ h2{margin:1.3rem 0 0.5rem;font-size:1.25rem;text-decoration:underline double}
 .card{background:#ffffffe0;border:1px solid #888;backdrop-filter:blur(2px);
       padding:1rem;border-radius:10px;text-align:center;box-shadow:0 2px 4px rgba(0,0,0,.08)}
 .card h2{font-size:0.9rem;margin-bottom:0.15rem}
-.card p{font-size:1.4rem;font-weight:700}
-.positive{color:var(--green)} .negative{color:var(--red)}
+.card p{font-size:1.4rem;font-weight:700}.positive{color:var(--green)}.negative{color:var(--red)}
 table{width:100%;border-collapse:collapse;margin-bottom:2rem;background:#ffffffd0;border:1px solid #888;backdrop-filter:blur(2px)}
 thead{background:#343434;color:#fff}th,td{padding:0.55rem 0.6rem;text-align:center;font-size:0.9rem}
 tbody tr:nth-child(even){background:#f1f5f9dd}
@@ -69,42 +68,25 @@ button{cursor:pointer;font-weight:700;background:var(--lav)}
 </div>
 
 <script>
-/* ----------- CONFIG ----------- */
-const START_BALANCE = 6100;                        // saldo iniziale 24-06-2025
+/* ---------- UTIL ---------- */
+const START_BALANCE = 6100;
 const fmt = v => `€ ${Math.round(v).toLocaleString('it-IT')}`;
 const monthKey = d => d.slice(0,7);
 const lastDay=(y,m)=>new Date(y,m+1,0).getDate();
 
-/* ----------- Transazioni fisse da luglio 2025 a dicembre 2026 ----------- */
-const subs = [
-  ['Netflix',19,26,'2025-06'],['Will',7,28,'2025-06'],['ChatGPT',23,22,'2025-06'],
-  ['NowTV',5,19,'2025-07'],['Spotify',15,20,'2025-07'],['Prime Video AD',2,16,'2025-07'],
-  ['Prime',5,16,'2025-07'],['iCloud',10,23,'2025-07'],['YouTube+',9,11,'2025-07']
-];
-const oneOff = [
-  ['2025-06-27','Aereo Sicilia',53,'Spesa'],['2025-07-12','Beat Canzone',35,'Spesa'],
-  ['2025-07-16','Mix Canzone',27,'Spesa'],  ['2025-07-27','Aereo Sicilia',53,'Spesa'],
-  ['2025-08-10','Rimborso 730',400,'Entrata'],['2025-08-12','Beat Canzone',35,'Spesa'],
-  ['2025-08-16','Mix Canzone',27,'Spesa'], ['2025-07-15','Tredicesima',1300,'Entrata']
-];
-const loan=['2025-07-01','2025-08-01','2025-09-01','2025-10-01']
-            .map(d=>[d,'Finanziamento',39,'Spesa']);
+/* ---------- Spese fisse generate (lug 2025 → dic 2026) ---------- */
+const subs=[['Netflix',19,26,'2025-06'],['Will',7,28,'2025-06'],['ChatGPT',23,22,'2025-06'],['NowTV',5,19,'2025-07'],['Spotify',15,20,'2025-07'],['Prime Video AD',2,16,'2025-07'],['Prime',5,16,'2025-07'],['iCloud',10,23,'2025-07'],['YouTube+',9,11,'2025-07']];
+const oneOff=[['2025-06-27','Aereo Sicilia',53,'Spesa'],['2025-07-12','Beat Canzone',35,'Spesa'],['2025-07-16','Mix Canzone',27,'Spesa'],['2025-07-27','Aereo Sicilia',53,'Spesa'],['2025-08-10','Rimborso 730',400,'Entrata'],['2025-08-12','Beat Canzone',35,'Spesa'],['2025-08-16','Mix Canzone',27,'Spesa'],['2025-07-15','Tredicesima',1300,'Entrata']];
+const loan=['2025-07-01','2025-08-01','2025-09-01','2025-10-01'].map(d=>[d,'Finanziamento',39,'Spesa']);
 
-let tx=[];
-const push=(d,c,t,a)=>tx.push({date:d,category:c,type:t,amount:a});
+let tx=[]; const push=(d,c,t,a)=>tx.push({date:d,category:c,type:t,amount:a});
 
-/* ----------- Genera tutte le ricorrenze fisse ----------- */
 function generateFixed(){
   tx=[]; oneOff.forEach(([d,c,a,t])=>push(d,c,t,a)); loan.forEach(([d,c,a,t])=>push(d,c,t,a));
-
-  let cur=new Date(2025,5,24);                    // giugno 2025
-  const end=new Date(2026,11,31);                 // dic 2026
+  let cur=new Date(2025,5,24), end=new Date(2026,11,31);
   while(cur<=end){
-    const y=cur.getFullYear(), m=cur.getMonth(), iso=`${y}-${String(m+1).padStart(2,'0')}`;
-    if(cur>=new Date('2025-07-01')){
-      push(`${iso}-01`,'Stipendio','Entrata',1650);
-      push(`${iso}-01`,'Ticket Edenred','Entrata',160);
-    }
+    const y=cur.getFullYear(),m=cur.getMonth(),iso=`${y}-${String(m+1).padStart(2,'0')}`;
+    if(cur>=new Date('2025-07-01')){push(`${iso}-01`,'Stipendio','Entrata',1650);push(`${iso}-01`,'Ticket Edenred','Entrata',160);}
     push(`${iso}-${lastDay(y,m)}`,'Affitto','Spesa',680);
     if(iso!=='2025-08') push(`${iso}-${lastDay(y,m)}`,'ATM','Spesa',39);
     [5,12,19,26].forEach(d=>d<=lastDay(y,m)&&push(`${iso}-${String(d).padStart(2,'0')}`,'Tabacco','Spesa',20));
@@ -112,23 +94,23 @@ function generateFixed(){
       if(iso>=from){const d=Math.min(day,lastDay(y,m));push(`${iso}-${String(d).padStart(2,'0')}`,cat,'Spesa',amt);}
     });
     cur.setMonth(m+1);
-  }
-}
+}};
 generateFixed();
 
-/* ----------- Stato import XLSX ----------- */
-let extraMonthly={};   // { '2025-11': {in,out} ... }
+/* ---------- Stato import XLSX ---------- */
+let extraMonthly={};   // { 'aaaa-mm': {in,out} }
 
-/* ----------- Calcola e renderizza ----------- */
+/* ---------- Calcolo + Render ---------- */
 function render(){
-  const C=document.getElementById('cards'),M=document.querySelector('#monthly tbody'),
-        D=document.querySelector('#detail tbody');
-  C.innerHTML=''; M.innerHTML=''; D.innerHTML='';
+  const cards=document.getElementById('cards'),
+        mBody=document.querySelector('#monthly tbody'),
+        dBody=document.querySelector('#detail tbody');
+  cards.innerHTML=''; mBody.innerHTML=''; dBody.innerHTML='';
 
   const base=[...tx].sort((a,b)=>new Date(a.date)-new Date(b.date));
   let bal=START_BALANCE, monthly={};
   base.forEach(t=>{
-    bal+= t.type==='Entrata'? t.amount : -t.amount;
+    bal += t.type==='Entrata'?t.amount:-t.amount;
     t.balance=bal;
     const k=monthKey(t.date);
     monthly[k]??={in:0,out:0,s:0};
@@ -142,67 +124,86 @@ function render(){
     monthly[m].out += extraMonthly[m].out;
   }
 
-  let running=START_BALANCE;
+  let run=START_BALANCE;
   Object.keys(monthly).sort().forEach(m=>{
-    running += (extraMonthly[m]?.in||0)-(extraMonthly[m]?.out||0);
-    monthly[m].s=running;
+    run += (extraMonthly[m]?.in||0)-(extraMonthly[m]?.out||0);
+    monthly[m].s=run;
   });
 
-  const totIn = Object.values(monthly).reduce((s,m)=>s+m.in,0),
-        totOut= Object.values(monthly).reduce((s,m)=>s+m.out,0),
-        avgOut= Math.round(totOut/Object.keys(monthly).length);
-  [['Saldo iniziale',START_BALANCE],
-   ['Entrate totali',totIn,'positive'],
-   ['Uscite totali',totOut,'negative'],
-   ['Spesa media mese',avgOut,'negative'],
-   ['Saldo attuale',running,running>=0?'positive':'negative']]
-  .forEach(([l,v,cls])=>{
-     const c=document.createElement('div');c.className='card';
-     c.innerHTML=`<h2>${l}</h2><p class="${cls||''}">${fmt(v)}</p>`;C.appendChild(c);
-  });
+  const totIn=Object.values(monthly).reduce((s,m)=>s+m.in,0),
+        totOut=Object.values(monthly).reduce((s,m)=>s+m.out,0),
+        avgOut=Math.round(totOut/Object.keys(monthly).length);
+  [['Saldo iniziale',START_BALANCE,''],['Entrate totali',totIn,'positive'],['Uscite totali',totOut,'negative'],['Spesa media mese',avgOut,'negative'],['Saldo attuale',run,run>=0?'positive':'negative']]
+  .forEach(([l,v,cls])=>{const c=document.createElement('div');c.className='card';c.innerHTML=`<h2>${l}</h2><p class="${cls}">${fmt(v)}</p>`;cards.appendChild(c);});
 
   Object.keys(monthly).sort().forEach(m=>{
     const {in:inn,out,s}=monthly[m];
-    M.insertAdjacentHTML('beforeend',
-      `<tr><td>${m}</td><td class="income">${fmt(inn)}</td><td class="expense">${fmt(out)}</td><td class="balance ${s>=0?'positive':'negative'}">${fmt(s)}</td></tr>`);
+    mBody.insertAdjacentHTML('beforeend',`<tr><td>${m}</td><td class="income">${fmt(inn)}</td><td class="expense">${fmt(out)}</td><td class="balance ${s>=0?'positive':'negative'}">${fmt(s)}</td></tr>`);
   });
 
   let cur=''; base.forEach(t=>{
     const k=monthKey(t.date);
     if(k!==cur){cur=k;const label=new Date(`${k}-01`).toLocaleDateString('it-IT',{month:'long',year:'numeric'});
-      D.insertAdjacentHTML('beforeend',`<tr class="month-sep"><td colspan="5">${label.charAt(0).toUpperCase()+label.slice(1)}</td></tr>`);}
-    D.insertAdjacentHTML('beforeend',
-      `<tr><td>${t.date}</td><td>${t.category}</td><td><span class="badge ${t.type==='Entrata'?'income':'expense'}">${t.type}</span></td><td class="${t.type==='Entrata'?'income':'expense'}">${fmt(t.amount)}</td><td class="balance ${t.balance>=0?'positive':'negative'}">${fmt(t.balance)}</td></tr>`);
+      dBody.insertAdjacentHTML('beforeend',`<tr class="month-sep"><td colspan="5">${label.charAt(0).toUpperCase()+label.slice(1)}</td></tr>`);}
+    dBody.insertAdjacentHTML('beforeend',`<tr><td>${t.date}</td><td>${t.category}</td><td><span class="badge ${t.type==='Entrata'?'income':'expense'}">${t.type}</span></td><td class="${t.type==='Entrata'?'income':'expense'}">${fmt(t.amount)}</td><td class="balance ${t.balance>=0?'positive':'negative'}">${fmt(t.balance)}</td></tr>`);
   });
 }
 render();
 
-/* ----------- Import XLSX ----------- */
+/* ---------- Import XLSX ---------- */
 document.getElementById('xlsx-form').addEventListener('submit',e=>{
   e.preventDefault();
-  const f=document.getElementById('xlsx-file').files[0];
-  if(!f){alert('Scegli il file XLSX');return;}
-  const COL_DATE='Data', COL_AMT='Importo';   // se servono, cambia i nomi colonne
+  const file=document.getElementById('xlsx-file').files[0];
+  if(!file){alert('Seleziona un file XLSX');return;}
+
   const reader=new FileReader();
   reader.onload=ev=>{
-    const wb=XLSX.read(ev.target.result,{type:'binary'}), ws=wb.Sheets[wb.SheetNames[0]],
-          rows=XLSX.utils.sheet_to_json(ws,{defval:''});
+    /* Leggi workbook */
+    const wb=XLSX.read(ev.target.result,{type:'array'});
+    const ws=wb.Sheets[wb.SheetNames[0]];
+    const rows=XLSX.utils.sheet_to_json(ws,{header:1,defval:''});
+
+    /* Trova riga header con colonne Data + Importo (o Amount/Import/etc) */
+    let hIdx=-1, colDate=-1, colAmt=-1;
+    for(let i=0;i<rows.length;i++){
+      const r=rows[i].map(x=>x.toString().toLowerCase());
+      if(r.some(c=>c.includes('data')) && r.some(c=>c.match(/import|amount|debito|credito/)) ){
+        hIdx=i;
+        colDate=r.findIndex(c=>c.includes('data'));
+        colAmt =r.findIndex(c=>c.match(/import|amount|debito|credito/));
+        break;
+      }
+    }
+    if(hIdx===-1){alert('Impossibile trovare le colonne Data + Importo');return;}
+
     extraMonthly={};
-    rows.forEach(r=>{
-      const rawDate=r[COL_DATE]||r.date; if(!rawDate) return;
-      const iso = typeof rawDate==='number'? XLSX.SSF.format('yyyy-mm-dd',rawDate)
-                                           : new Date(rawDate).toISOString().slice(0,10);
-      const amt=parseFloat((r[COL_AMT]||'').toString().replace(',','.')); if(isNaN(amt)) return;
+
+    for(let i=hIdx+1;i<rows.length;i++){
+      const r=rows[i];
+      if(!r[colDate] || !r[colAmt]) continue;
+
+      /* Data → iso yyyy-mm-dd */
+      let iso;
+      if(typeof r[colDate]==='number')
+           iso=XLSX.SSF.format('yyyy-mm-dd',r[colDate]);
+      else iso=new Date(r[colDate]).toISOString().slice(0,10);
+
+      /* Importo → numero */
+      const amt=parseFloat(r[colAmt].toString()
+                   .replace(/\./g,'').replace(',','.').replace('€','').trim());
+      if(isNaN(amt)) continue;
+
       const m=monthKey(iso); extraMonthly[m]??={in:0,out:0};
       amt>=0? extraMonthly[m].in+=amt : extraMonthly[m].out+=Math.abs(amt);
-    });
-    render(); alert('Import XLSX: totali mensili aggiornati!');
+    }
+
+    render(); alert('Import completato e riepilogo aggiornato!');
     e.target.reset();
   };
-  reader.readAsBinaryString(f);
+  reader.readAsArrayBuffer(file);
 });
 
-/* ----------- Form manuale ----------- */
+/* ---------- Inserisci manualmente ---------- */
 document.getElementById('manual').addEventListener('submit',e=>{
   e.preventDefault();
   const d=document.getElementById('m-date').value,
